# java-mcp-tools

./: README.md  pyproject.toml  qwen-system-prompt.md
.qwen/: config.json
java_mcp/: project.py  server.py  server_agent.py
java_mcp/tools/: architecture.py  code_parser.py  dep_graph_renderer.py  filesystem.py  graph.py  java_analysis.py  project_info.py  runner.py  search.py  spring_graph.py
java_mcp_tools.egg-info/: SOURCES.txt  requires.txt
tests/: test_architecture.py  test_filesystem.py  test_graph.py  test_integration_bike_rental.py  test_java_analysis.py  test_project_info.py  test_search.py  test_spring_graph.py
