[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "java-mcp-tools"
version = "0.1.0"
description = "MCP server with IntelliJ-compatible tools for Java projects — no IDE required"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-java>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
java-mcp = "java_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
